# HotUtils

./: CMakeLists.txt  README.md
include/hot_utils/: copy_move_log.hpp  do_not_optimize.hpp  hot_utils.hpp  log_utils.hpp  memory_logger.hpp  scoped_timer.hpp  streamlined_vector.hpp
tests/: test_copy_move_log.cpp  test_do_not_optimize.cpp  test_log_utils.cpp  test_memory_logger.cpp  test_playground.cpp  test_scoped_timer.cpp  test_streamlined_vector.cpp
